tests/NormalTests/paczka1/fuzzy1/21580341.err
Error in line 1: 4HU7Rm3 S295 4,28
Error in line 8: 4HU7Rm3 S27 29,5
Error in line 10: ZabjoaUqJp A742 45,8
Error in line 17: uqKh A742 27,18
Error in line 18: uqKh A742 24,5
Error in line 16: 4eh A130 18,8
Error in line 20: 4HU7Rm3 A130 4,9
Error in line 31: uqKh A1R0 9,4
